--- a/.github/workflows/generate-thumbnails.yml
+++ b/.github/workflows/generate-thumbnails.yml
@@ -35,7 +35,7 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add Thumbnails
-        git commit -m "Add generated thumbnails"
+        git commit -m "Add Auto generated thumbnails"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
