--- a/.github/workflows/generate-thumbnails-and-json.yml
+++ b/.github/workflows/generate-thumbnails-and-json.yml
@@ -1,4 +1,4 @@
-name: Generate Thumbnails
+name: Generate Thumbnails and JSON
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  generate-thumbnails:
+  generate-thumbnails-and-json:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,12 +30,16 @@ jobs:
       run: |
         python generate_thumbnails.py
 
+    - name: Generate JSON
+      run: |
+        python generate_json.py
+
     - name: Commit and push changes
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add Thumbnails
-        git commit -m "Add Auto generated thumbnails"
+        git add Thumbnails directory_cache.json
+        git commit -m "Add auto-generated thumbnails and JSON"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
